# plane-db-builder

./: .gitignore  README.md  plane-db-builder.py  pyproject.toml
.github/workflows/: codeql.yml  dependency-review.yml  scorecards.yml
utils/: reg2icao.py
